<resources>
    <string name="app_name">Jacks Or Better</string>

    <string name="simulations">Simulations</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>


    <!-- Preferences -->
    <string name="general_header">General</string>
    <string name="money_header">Money</string>
    <string name="payout_table_title">Payout Table</string>
    <string name="reset_money">Reset Money</string>
    <string name="autohold_description">Increasing the number increases the accuracy but also increases the decision time. (Default 5,000)</string>
    <string name="training_strict_description">Increasing the number increases the strictness when comparing your hand to the best hand. Sometimes differences in expected values between hands is negligible</string>

    <!--    Main Fragment -->
    <string name="collect_button">Collect</string>
    <string name="training_expected_diff">Difference: $%.3f</string>
    <string name="deal_button">Deal</string>
    <string name="double_button">Double</string>
    <string name="bet_one_button">Bet Up</string>
    <string name="bet_max_button">Bet Max</string>
    <string name="button_explain">Explain</string>
    <string name="autohold">Autohold</string>
    <string name="hand_stats">Hand Stats</string>
    <string name="training">Training</string>
    <string name="training_optimal_expected">Optimal Expected: %s</string>
    <string name="training_your_expected">Your Expected: %s</string>
    <string name="training_all_choices">All Choices</string>
    <string name="training_correct_count">Correct: %d</string>
    <string name="training_wrong_count">Wrong: %d</string>
    <string name="training_accuracy">Accuracy: %.2f%%</string>
    <string name="training_wrong">Wrong</string>
    <string name="training_correct">Correct</string>
    <string name="hand_increase_error">Can\'t change mid game</string>
    <string name="hand_decrease_error">Minimum: 1 hand</string>

    <string name="tap_card_to_hold">Tap card to hold</string>

    <!--   Bonus round stuff   -->
    <string name="bonus_correct_guess">Winner!</string>
    <string name="bonus_wrong_guess">Wrong Guess!</string>
    <string name="bonus_title">Guess the color?</string>

    <!--   Hand stats  -->
    <string name="stats_optimal_return_pos">Optimal Return: +$%.3f</string>
    <string name="stats_optimal_return_neg">Optimal Return: -$%.3f</string>
    <string name="stats_your_return_pos">Your Return: +$%.3f</string>
    <string name="stats_your_return_neg">Your Return: -$%.3f</string>


    <!--    Stat fragment screen  -->
    <string name="loss">Loss: -$%d</string>
    <string name="loss2">Loss:</string>
    <string name="won">Won: $%d</string>
    <string name="won2">Won:</string>
    <string name="total">Total: $%d</string>
    <string name="total2">Total:</string>
    <string name="total_neg">Total: -$%d</string>
    <string name="bet">Bet: $%d</string>
    <string name="bet2">Bet:</string>
    <string name="eval">Eval: %s</string>
    <string name="eval2">Eval:</string>
    <string name="your_accuracy">Accuracy: %.2f%%</string>

    <string name="correct_count">Correct Count: %d</string>
    <string name="wrong_count">Wrong Count: %d</string>
    <string name="correct_count2">Correct Count: </string>
    <string name="wrong_count2">Wrong Count: </string>
    <string name="percent">Accuracy</string>
    <string name="percent2">Accuracy: </string>

    <string name="reset"><u>Reset</u></string>

    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="hold">Hold</string>

    <string name="guess_the_color">Guess the color?</string>
    <string name="red">Red</string>
    <string name="black">Black</string>

    <!--   About -->
    <string name="other_apps">My Other Apps:</string>
    <string name="about_feedback_title">Feedback:</string>
    <string name="about_feedback">Found a bug? Have a cool idea? Want a new statistic feature? Email me, I love feedback/suggestions!</string>
    <string name="email_me">Email Me</string>
    <string name="about_jacks_poker">Jacks or Better is the most popular video poker variant. </string>


    <!--    Dialog Reset Money -->
    <string name="select_money">Select how much you want</string>
    <string name="five_thousand" translatable="false">$5,000</string>
    <string name="thousand" translatable="false">$1,000</string>
    <string name="ten_thousand" translatable="false">$10,000</string>
    <string name="money_set">Money set: $%d</string>

    <!--  Highscore Fragment -->
    <string name="log_in">Log In</string>
    <string name="signed_in">Signed In</string>
    <string name="highscore_id" translatable="false">CgkIqLmFopAZEAIQBg</string>
    <string name="app_id" translatable="false">863359818920</string>
    <string name="dev_settings">Dev Settings</string>
    <string name="no_highscore_results">No High Scores</string>
    <string name="battle_with_the_best">Sign in to submit high scores!</string>
    <string name="highscores">High Scores</string>
    <string name="sign_in_success">Sign in: Success</string>


    <!--    Dialog Golden God-->
    <string name="golden_god_highscore">High Score</string>
    <string name="golden_god_highscore_desc">#1 Global High Score</string>
    <string name="golden_god_desc">You are a Golden God and should be treated as such. You\'ve unlocked the golden card back. (You can change card backs in settings)</string>


    <string name="whats_new_title" translatable="false">What\'s New (v%s)</string>
    <string name="whats_new_desc" translatable="false">…<br/>
    </string>


    <string name="two_decimal" translatable="false">%.2f%%</string>
</resources>