<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/simulations"
        android:title="@string/simulations"
        app:showAsAction="never"/>

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/stats"
        android:title="@string/statistics"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>


    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>