<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            style="@style/AboutTitle"
            android:id="@+id/threecard_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:keepScreenOn="true"
            android:text="@string/app_name"
            />

        <TextView
            style="@style/AboutDesc"
            android:id="@+id/aboutLetItRide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:keepScreenOn="true"
            android:text="@string/about_jacks_poker"
            />



        <TextView
            style="@style/AboutTitle"
            android:id="@+id/otherApps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:keepScreenOn="true"
            android:text="@string/other_apps"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

<!--            <ImageView-->
<!--                android:id="@+id/jacks"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_margin="5dp"-->
<!--                app:srcCompat="@drawable/jacks_ad_round" />-->

            <ImageView
                android:id="@+id/deuces"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/deuces_ad" />

            <ImageView
                android:id="@+id/pokerHandBuddy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/poker_buddy_ad_round" />


            <ImageView
                android:id="@+id/letItRide"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/let_it_ride_icon" />

        </LinearLayout>

        <TextView
            style="@style/AboutTitle"
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:keepScreenOn="true"
            android:text="@string/about_feedback_title"
            />

        <TextView
            style="@style/AboutContent"
            android:id="@+id/feedback_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:keepScreenOn="true"
            android:text="@string/about_feedback"
            />


        <Button
            android:layout_marginBottom="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:id="@+id/emailButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email_me" />

    </LinearLayout>

</ScrollView>