<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/round_background"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_height="match_parent"
    android:layout_width="115dp">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        >

        <TextView
            android:id="@+id/highScoreTitle"
            style="@style/TextPayTableOrangeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:layout_weight=".80"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/highscores" />

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight=".20"
            android:src="@drawable/baseline_refresh_24"/>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/item_highscore"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/noHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/no_highscore_results"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            style="@style/TipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/battle_with_the_best"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>







